[project]
name = "realtimex-social-media-posts-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rta_phuongnguyen", email = "phuongnguyen@rtanalytics.vn" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "openai",
    "tabulate",
    "crawl4ai",
    "playwright"
]

[project.scripts]
realtimex-social-media-posts-tools = "realtimex_social_media_posts_tools.cli:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
